build/log/idf_py_stderr_output_12484
Command: make -j 10 all
In file included from /home/fus/Documents/DO-AN-02/main/sender.h:1,
                 from /home/fus/Documents/DO-AN-02/main/do-an-02.c:2:
/home/fus/Documents/DO-AN-02/main/../helper/general.h:87:14: warning: 'comObject' initialized and declared 'extern'
   87 | extern void* comObject = NULL;
      |              ^~~~~~~~~
/home/fus/Documents/DO-AN-02/main/sender.h: In function 'oledTask':
/home/fus/Documents/DO-AN-02/main/sender.h:112:10: warning: unused variable 'c' [-Wunused-variable]
  112 |     char c[] = "--> 0";
      |          ^
/home/fus/Documents/DO-AN-02/main/do-an-02.c: At top level:
/home/fus/Documents/DO-AN-02/main/do-an-02.c:23:7: error: redefinition of 'comObject'
   23 | void* comObject = NULL;
      |       ^~~~~~~~~
/home/fus/Documents/DO-AN-02/main/../helper/general.h:87:14: note: previous definition of 'comObject' with type 'void *'
   87 | extern void* comObject = NULL;
      |              ^~~~~~~~~
In file included from /home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/oled128x64.h:4,
                 from /home/fus/Documents/DO-AN-02/main/sender.h:4:
/home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/../i2c/i2c.h:31:23: warning: 'i2cHandleSDAIsr' defined but not used [-Wunused-function]
   31 | static void IRAM_ATTR i2cHandleSDAIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/../i2c/i2c.h:22:23: warning: 'i2cHandleSCLIsr' defined but not used [-Wunused-function]
   22 | static void IRAM_ATTR i2cHandleSCLIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/do-an-02.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7426: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
